--- a/realTimeEventTicketingUI/src/app/log-display/log-display.component.html
+++ b/realTimeEventTicketingUI/src/app/log-display/log-display.component.html
@@ -1,1 +1,8 @@
+<div class="log-container">
+  <h2>Real-Time Logs</h2>
+  <div *ngFor="let log of logs" class="log-entry">
+    {{ log }}
+  </div>
+</div>
+
 <app-control-panel></app-control-panel>
