--- a/realTimeEventTicketingUI/src/app/configuration-form/configuration-form.component.html
+++ b/realTimeEventTicketingUI/src/app/configuration-form/configuration-form.component.html
@@ -10,14 +10,14 @@
       <input
         matInput
         placeholder="Total Tickets"
-        name="totalTickets"
+        name="Total Tickets"
         [(ngModel)]="configuration.totalTickets"
         #totalTickets="ngModel"
         required
         pattern="^[2-9][0-9]+$"
         (ngModelChange)="validateTotalTickets()"
       />
-      <mat-icon matSuffix>person</mat-icon>
+      <mat-icon matSuffix>functions</mat-icon>
       <mat-error *ngIf="totalTickets.invalid && totalTickets.touched">
         <span *ngIf="totalTickets.errors?.['required']"
           >Total tickets are required.</span
@@ -33,18 +33,18 @@
 
     <!-- Vendor Ticket Release Interval -->
     <mat-form-field appearance="outline">
-      <mat-label>Vendor Ticket Release Interval</mat-label>
+      <mat-label>Vendor Ticket Release Rate</mat-label>
       <input
         matInput
         placeholder="Vendor Ticket Release Interval"
-        name="ticketReleaseRate"
+        name="Vendor Ticket Release Rate"
         [(ngModel)]="configuration.ticketReleaseRate"
         #ticketReleaseRate="ngModel"
         required
         pattern="^[1-9]{1}"
         (ngModelChange)="validateIntervals()"
       />
-      <mat-icon matSuffix>call</mat-icon>
+      <mat-icon matSuffix>speed</mat-icon>
       <mat-error *ngIf="ticketReleaseRate.invalid && ticketReleaseRate.touched">
         <span *ngIf="ticketReleaseRate.errors?.['required']"
           >This field is required.</span
@@ -57,18 +57,18 @@
 
     <!-- Customer Ticket Retrieval Interval -->
     <mat-form-field appearance="outline">
-      <mat-label>Customer Ticket Retrieval Interval</mat-label>
+      <mat-label>Customer Ticket Retrieval Rate</mat-label>
       <input
         matInput
         placeholder="Customer Ticket Retrieval Interval"
-        name="customerRetrievalRate"
+        name="Customer Ticket Retrieval Rate"
         [(ngModel)]="configuration.customerRetrievalRate"
         #customerRetrievalRate="ngModel"
         required
         pattern="^[1-9]{1}"
         (ngModelChange)="validateIntervals()"
       />
-      <mat-icon matSuffix>apartment</mat-icon>
+      <mat-icon matSuffix>speed</mat-icon>
       <mat-error
         *ngIf="customerRetrievalRate.invalid && customerRetrievalRate.touched"
       >
@@ -86,18 +86,18 @@
 
     <!-- Maximum Ticket Capacity of Buffer -->
     <mat-form-field appearance="outline">
-      <mat-label>Maximum Ticket Capacity of Buffer</mat-label>
+      <mat-label>Maximum Ticket Capacity</mat-label>
       <input
         matInput
         placeholder="Maximum Ticket Capacity of Buffer"
-        name="maxTicketCapacity"
+        name="Maximum Ticket Capacity"
         [(ngModel)]="configuration.maxTicketCapacity"
         #maxTicketCapacity="ngModel"
         required
         pattern="^[1-9][0-9]+$"
         (ngModelChange)="validateMaxCapacity()"
       />
-      <mat-icon matSuffix>apartment</mat-icon>
+      <mat-icon matSuffix>water_full</mat-icon>
       <mat-error *ngIf="maxTicketCapacity.invalid && maxTicketCapacity.touched">
         <span *ngIf="maxTicketCapacity.errors?.['required']"
           >This field is required.</span
