--- a/realTimeEventTicketingUI/src/app/customer/customer.component.html
+++ b/realTimeEventTicketingUI/src/app/customer/customer.component.html
@@ -32,7 +32,7 @@
         pattern="^[a-zA-Z\s,.-]+$"
         #address="ngModel"
       />
-      <mat-icon matSuffix>call</mat-icon>
+      <mat-icon matSuffix>apartment</mat-icon>
       <mat-error *ngIf="address.invalid && address.touched">
         <span *ngIf="address.errors?.['required']">Address is required.</span>
         <span *ngIf="address.errors?.['pattern']"
@@ -52,7 +52,7 @@
         email
         #email="ngModel"
       />
-      <mat-icon matSuffix>apartment</mat-icon>
+      <mat-icon matSuffix>alternate_email</mat-icon>
       <mat-error *ngIf="email.invalid && email.touched">
         <span *ngIf="email.errors?.['required']">Email is required.</span>
         <span *ngIf="email.errors?.['email']">Invalid email format.</span>
@@ -70,7 +70,7 @@
         pattern="^[0-9]{10}$"
         #tel="ngModel"
       />
-      <mat-icon matSuffix>apartment</mat-icon>
+      <mat-icon matSuffix>call</mat-icon>
       <mat-error *ngIf="tel.invalid && tel.touched">
         <span *ngIf="tel.errors?.['required']"
           >Telephone number is required.</span
@@ -92,7 +92,7 @@
         pattern="^[1-9]{1}$"
         #quantity="ngModel"
       />
-      <mat-icon matSuffix>apartment</mat-icon>
+      <mat-icon matSuffix>123</mat-icon>
       <mat-error *ngIf="quantity.invalid && quantity.touched">
         <span *ngIf="quantity.errors?.['required']"
           >This field is required.</span
