--- a/realTimeEventTicketingUI/src/app/log-display/log-display.component.html
+++ b/realTimeEventTicketingUI/src/app/log-display/log-display.component.html
@@ -1,8 +1,11 @@
 <div class="log-container">
-  <h2>Real-Time Logs</h2>
-  <div *ngFor="let log of logs" class="log-entry">
+  <h6>Real-Time Logs</h6>
+  <!-- <div *ngFor="let log of logs" class="log-entry">
     {{ log }}
-  </div>
+  </div> -->
+  <ul>
+    <li *ngFor="let log of logs">{{ log }}</li>
+  </ul>
 </div>
 
 <app-control-panel></app-control-panel>
