--- a/realTimeEventTicketingUI/src/app/ticket-list/ticket-list.component.html
+++ b/realTimeEventTicketingUI/src/app/ticket-list/ticket-list.component.html
@@ -1,54 +1,49 @@
 <div style="margin-top: 20px; margin-left: 20px">
-  <button routerLink="/ticketpool" mat-fab extended>
-    <mat-icon>app_registration</mat-icon>
-    TicketPool
-  </button>
-</div>
+  <div class="container" style="margin-top: 30px">
+    <table mat-table [dataSource]="dataSource" class="table">
+      <ng-container matColumnDef="transactionId">
+        <th mat-header-cell *matHeaderCellDef>Id</th>
+        <td mat-cell *matCellDef="let element">{{ element.transactionId }}</td>
+      </ng-container>
 
-<div class="container" style="margin-top: 30px">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <ng-container matColumnDef="transactionId">
-      <th mat-header-cell *matHeaderCellDef>Id</th>
-      <td mat-cell *matCellDef="let element">{{ element.transactionId }}</td>
-    </ng-container>
+      <ng-container matColumnDef="ticketNo">
+        <th mat-header-cell *matHeaderCellDef>Ticket No</th>
+        <td mat-cell *matCellDef="let element">{{ element.ticketNo }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="ticketNo">
-      <th mat-header-cell *matHeaderCellDef>Ticket No</th>
-      <td mat-cell *matCellDef="let element">{{ element.ticketNo }}</td>
-    </ng-container>
+      <ng-container matColumnDef="vendor">
+        <th mat-header-cell *matHeaderCellDef>Vendor</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.vendor }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="vendor">
-      <th mat-header-cell *matHeaderCellDef>Vendor</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.vendor }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="eventName">
+        <th mat-header-cell *matHeaderCellDef>Event</th>
+        <td mat-cell *matCellDef="let element">{{ element.eventName }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="eventName">
-      <th mat-header-cell *matHeaderCellDef>Event</th>
-      <td mat-cell *matCellDef="let element">{{ element.eventName }}</td>
-    </ng-container>
+      <ng-container matColumnDef="location">
+        <th mat-header-cell *matHeaderCellDef>Event Location</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.location }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="location">
-      <th mat-header-cell *matHeaderCellDef>Event Location</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.location }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="customer">
+        <th mat-header-cell *matHeaderCellDef>Customer</th>
+        <td mat-cell *matCellDef="let element">{{ element.customer }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="customer">
-      <th mat-header-cell *matHeaderCellDef>Customer</th>
-      <td mat-cell *matCellDef="let element">{{ element.customer }}</td>
-    </ng-container>
+      <ng-container matColumnDef="ticketPrice">
+        <th mat-header-cell *matHeaderCellDef>Ticket Price</th>
+        <td mat-cell *matCellDef="let element">{{ element.ticketPrice }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="ticketPrice">
-      <th mat-header-cell *matHeaderCellDef>Ticket Price</th>
-      <td mat-cell *matCellDef="let element">{{ element.ticketPrice }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="timestamp">
-      <th mat-header-cell *matHeaderCellDef>Time of Purchase</th>
-      <td mat-cell *matCellDef="let element">{{ element.timestamp }}</td>
-    </ng-container>
-  </table>
+      <ng-container matColumnDef="timestamp">
+        <th mat-header-cell *matHeaderCellDef>Time of Purchase</th>
+        <td mat-cell *matCellDef="let element">{{ element.timestamp }}</td>
+      </ng-container>
+    </table>
+  </div>
 </div>
