--- a/realTimeEventTicketingUI/src/app/home/home.component.html
+++ b/realTimeEventTicketingUI/src/app/home/home.component.html
@@ -17,6 +17,7 @@
           <li>
             View real-time logs or visit the TicketPool section for more info.
           </li>
+          <li>Go to Tickets to view purchased tickets catalogue.</li>
         </ul>
       </mat-card-content>
     </mat-card-header>
