--- a/realTimeEventTicketingUI/src/app/customer/customer.component.html
+++ b/realTimeEventTicketingUI/src/app/customer/customer.component.html
@@ -9,7 +9,7 @@
         name="Name"
         [(ngModel)]="customer.customerName"
         required
-        pattern="^[a-zA-Z\s]+$"
+        pattern="^[a-zA-Z\s,.]+$"
         #name="ngModel"
       />
       <mat-icon matSuffix>person</mat-icon>
@@ -89,7 +89,7 @@
         name="Amount of tickets"
         [(ngModel)]="customer.purchaseQuantity"
         required
-        pattern="^[1-9]{1}$"
+        pattern="^[1-9][0-9]?$"
         #quantity="ngModel"
       />
       <mat-icon matSuffix>123</mat-icon>
