--- a/realTimeEventTicketingUI/src/app/ticket-list/ticket-list.component.html
+++ b/realTimeEventTicketingUI/src/app/ticket-list/ticket-list.component.html
@@ -44,6 +44,9 @@
         <th mat-header-cell *matHeaderCellDef>Time of Purchase</th>
         <td mat-cell *matCellDef="let element">{{ element.timestamp }}</td>
       </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
   </div>
 </div>
