--- a/realTimeEventTicketingUI/src/app/page-not-found/page-not-found.component.html
+++ b/realTimeEventTicketingUI/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,14 @@
-<p>page-not-found works!</p>
+<div class="container">
+  <mat-card appearance="outlined">
+    <mat-card-header>
+      <mat-card-title> 404, Oops!</mat-card-title>
+      <mat-card-subtitle> Go back to Home </mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-actions>
+      <button mat-fab extended routerLink="">
+        Home Page
+        <mat-icon>home</mat-icon>
+      </button>
+    </mat-card-actions>
+  </mat-card>
+</div>
