--- a/realTimeEventTicketingUI/src/app/control-panel/control-panel.component.css
+++ b/realTimeEventTicketingUI/src/app/control-panel/control-panel.component.css
@@ -1,8 +1,8 @@
 .control-panel {
   display: flex;
-  justify-content: center;  /* Center horizontally */
-  align-items: center;      /* Center vertically */
-  margin-top: 50px;                /* Remove default margin */
+  justify-content: center;  
+  align-items: center; 
+  margin-top: 50px;          
   color: #3f001b;
   gap: 20px;
   }
